# LogRelay

./: README.md  pyproject.toml
src/logrelay/: __init__.py  email_relay.py  line_relay.py  main.py
