[project]
name = "logrelay"
version = "0.1.1"
description = "Error log relay using various methods (LINE, Mail, etc.)"
authors = [
    { name = "RRRRRRR777", email = "yr1919@icloud.com" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/logrelay"]
